# src/routers/transaction-router.ts
@@ -3,15 +3,16 @@ import { QrController } from '../controllers/QrController';
 import { authMiddleware } from '../middlewares/auth-middleware';
 import { checkPinMiddleware } from '../middlewares/check-pin-middleware';
 import { CardlessController } from '../controllers/CardlessController';
+import { checkPhoneMiddleware } from '../middlewares/check-phone-middleware';
 export const transactionRouter = express.Router();
 
 transactionRouter.use(authMiddleware);
 transactionRouter.post('/generate-qr', QrController.generateQrCode);
-transactionRouter.post(
-  '/transfer-qr',
-  checkPinMiddleware,
-  QrController.transferQr
-);
+// transactionRouter.post(
+//   '/transfer-qr',
+//   checkPinMiddleware,
+//   QrController.transferQr
+// );
 
 transactionRouter.post(
   '/generate-token',
@@ -21,12 +22,12 @@ transactionRouter.post(
 
 transactionRouter.post(
   '/demo-withdraw',
-  checkPinMiddleware,
+  checkPhoneMiddleware,
   CardlessController.demoWithdraw
 );
 transactionRouter.post(
   '/demo-topup',
-  checkPinMiddleware,
+  checkPhoneMiddleware,
   CardlessController.demoTopup
 );
 
